# projet_python_2_mba

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci_cd.yml
src/banking_api/: main.py
src/banking_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/banking_api/routers/: customers.py  fraud.py  stats.py  system.py  transactions.py
src/banking_api/services/: customer_service.py  data_loader.py  fraud_detection_service.py  stats_service.py  system_service.py  transactions_service.py
tests/unit/: test_api.py  test_performance.py  test_services_pure.py  test_validation.py
