[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banking-api"
version = "1.0.0"
description = "API for portfolio asset retrieval management"
authors = [
  { name = "Thomas MARIE-ANNE", email = "t_marieanne@stu-mba-esg.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart",
    "httpx"
]

[project.urls]
"Homepage" = "https://github.com/ThomasMrne/projet_python_2_mba"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build", "dist", "\\.egg-info"]