[project]
name = "banking-api"
version = "1.0.0"
description = "API for portfolio asset retrieval management"
authors = [
  { name = "Thomas MARIE-ANNE", email = "t_marieanne@stu-mba-esg.com" },
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart",
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/ThomasMrne/projet_python_2_mba"

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pandas-stubs",
]

[tool.uv]
managed = true
package = true

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
exclude = ["build", "dist", "\\.egg-info"]